add feedback chanel for users

--- a/backend/app/templates/gameplay.html
+++ b/backend/app/templates/gameplay.html
@@ -166,7 +166,6 @@
   </div>
 
 </div>
-
 <div id="admin_interface">
   <hr>
   <div class="row ">
@@ -205,6 +204,11 @@
   </div>
 </div>
 
+<div class="row ">
+  <div class="col-md-1 col-xs-offset-10 col-md-offset-10">
+      <a class="roundetb" id="feedbackBtn" href="#"><i class="fas fa-paper-plane"></i></a>
+  </div>
+</div>
 
 <div class="row col-md-offset-1 col-md-6" style="height:150px;">
   <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/feedback.css') }}">
@@ -270,6 +274,33 @@
     </div>
   </div>
 </div>
+<div class="row col-md-offset-1">
+<!-- The Modal -->
+  <div id="feedbackModal" class="modal">
+    <!-- Modal content -->
+    <div class="modal-content">
+      <div class="modal-header">
+        <span id="feedbackclose" class="close">&times;</span>
+        <h2>Anregungen oder Problme?</h2>
+      </div>
+      <div class="modal-body">
+        <p>Wenn es Probleme gibt, bitte immer den Browser mit angeben das hilft mir enorm das Problem nachzuvollziehen</p>
+        <p>Wenn dir das Spiel gefällt oder du verbesserungen hast kannst du mir gerne schreiben</p>
+        <p>Die E-Mail Adresse ist optional ich kontaktiere dich nur wenn ich Rückfragen habe</p>
+        <form class="form" method="POST" action="{{ url_for('game_play', gid=game.UUID) }}">
+          {{ form.csrf_token }}
+          {{ wtf.form_field(form.browser) }}
+          {{ wtf.form_field(form.message) }}
+          {{ wtf.form_field(form.mail) }}
+          {% for error in form.browser.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+          {% endfor %}
+          <input class="btn btn-primary" type="submit" value="Senden">
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
 
 {% block footer %}
   {{ super() }}
@@ -278,6 +309,8 @@
 {% block scripts %}
   {{ super() }}
   <script type=text/javascript src="{{url_for('static', filename='scripts/faq.js') }}">
+  </script>
+  <script type=text/javascript src="{{url_for('static', filename='scripts/feedback.js') }}">
   </script>
 <script>
 
@@ -696,6 +729,7 @@
 
   function startup(){
     faq();
+    feedback();
     var id = localStorage.getItem('id');
     var user = document.getElementById('ownuser');
     //var test = localStorage.getItem('name');
