--- a/backend/app/templates/gameplay.html
+++ b/backend/app/templates/gameplay.html
@@ -8,7 +8,7 @@
     <h2>Stapel</h2>
   </div>
   <div class="col-md-1 col-xs-offset-10 col-md-offset-8">
-      <a class="roundetb" id="faqBtn" href="#"><i class="fas fa-question" title="Fragen?></i></a>
+      <a class="roundetb" id="faqBtn" href="#"><i class="fas fa-question" title="Fragen?"></i></a>
   </div>
   <div class="col-md-11 col-md-9 col-xs-offset-1">
     <h2 class="message" id="Message"></h2>
