--- a/backend/app/templates/gameplay.html
+++ b/backend/app/templates/gameplay.html
@@ -285,7 +285,7 @@
       </div>
       <div class="modal-body">
         <p>Wenn es Probleme gibt, bitte immer den Browser mit angeben das hilft mir enorm das Problem nachzuvollziehen</p>
-        <p>Wenn dir das Spiel gefällt oder du verbesserungen hast kannst du mir gerne schreiben</p>
+        <p>Wenn dir das Spiel gefällt oder du Verbesserungen hast kannst du mir gerne schreiben</p>
         <p>Die E-Mail Adresse ist optional ich kontaktiere dich nur wenn ich Rückfragen habe</p>
         <form class="form" method="POST" action="{{ url_for('game_play', gid=game.UUID) }}">
           {{ form.csrf_token }}
