--- a/backend/app/templates/mail.html
+++ b/backend/app/templates/mail.html
@@ -4,6 +4,6 @@
 <p>The Message ist:</p>
 <p><b style="color:#0052cc">{{message}}</b> </p>
 <p>The used Browser ist: <b style="color:#0052cc">{{browser}}</b></p>
-<p>If you haf questions you can reach him/her on: <b style="color:#0052cc">{{email}}</b></p>
+<p>If you have questions you can reach him/her on: <b style="color:#0052cc">{{email}}</b></p>
 
 <p>Good Job!</p>
