bugfix animate hand

--- a/backend/app/templates/game.html
+++ b/backend/app/templates/game.html
@@ -272,9 +272,9 @@
         joincontainer.style.display = "none";
       var button = document.getElementById('startgame_id');
       button.disabled = false;
-      var hand = document.getElementById('startgame_id');
+      var hand = document.getElementById('inline_button_text');
       hand.style.webkitAnimationName = 'run'; // you had a trailing space here which does NOT get trimmed
-    
+
       setdamin.innerHTML = 'Du bist Admin. Bitte starten wenn alle Spieler in der Liste stehen.'
     }else{
       setdamin.innerHTML = 'Bitte warte bis der Admin das Spiel startet.'
