--- a/backend/app/templates/gameplay.html
+++ b/backend/app/templates/gameplay.html
@@ -204,7 +204,7 @@
   </div>
   <div class="row ">
     <div class="col-xs-11 col-md-11 col-md-offset-1 col-xs-offset-1">
-      <h2 id="admin_player">Spieler Verwalten</h2>
+      <h2 id="admin_player">Spieler verwalten</h2>
     </div>
   </div>
   <div class="row ">
