fix error remove first or moveuser user from game.

--- a/backend/app/templates/gameplay.html
+++ b/backend/app/templates/gameplay.html
@@ -732,7 +732,8 @@
     xhttp.onreadystatechange = function() {
       if (xhttp.readyState == XMLHttpRequest.DONE) {
         if (xhttp.status != 200){
-          alert('Fehler: '+xhttp.status);
+          var res=JSON.parse(xhttp.responseText);
+          alert(''+res.Message);
         }else{
           var res=JSON.parse(xhttp.responseText);
           alert(''+res.Message);
