extednd FAQ delete player

--- a/backend/app/templates/gameplay.html
+++ b/backend/app/templates/gameplay.html
@@ -273,6 +273,19 @@
             </picture>
           </div>
         </div>
+        <button class="accordion">Kann ich einen Spieler entfernen?</button>
+        <div class="panel">
+          <p>Nur dem Admin (derjenige der ein Spiel erstellt hat) steht diese Funktion zur Verfügung</p>
+          <p>Der Admin findet ganz unten einige zusätzliche Bedienelemente unter der Rubrick Spieler verwalten</p>
+          <p>Erst muss über das Auswahlfeld der Spieler gewählt werden, der entfernt werden soll.</p>
+          <p>Mit dem Button "Spieler entfernen" wird der ausgewählte Spieler aus dem Spiel entfernt</p>
+          <p>Der Admin kann nicht entfernt werden (eine Funktion Admin wechseln ist in Abeit)</p>
+          <div class="col-md-11 col-md-offset-1 example_img">
+            <picture>
+              <img alt="FAQ Spieler löschen" style="width:20%; height:auto;" src="{{ url_for('static',filename='image/delete_player.png') }}">
+            </picture>
+          </div>
+        </div>
         <button class="accordion">Weitere Fragen?</button>
         <div class="panel">
           <p>Schau dir gerne noch mal ganz in Ruhe das Erklärvideo an</p>
