--- a/backend/app/templates/gameplay.html
+++ b/backend/app/templates/gameplay.html
@@ -217,7 +217,7 @@
     </div>
 
     <div class="col-xs-6 col-sm-4 col-md-3">
-      <label for="choose_admin">Neuen Admin Wählen:</label>
+      <label for="choose_admin">Neuen Admin wählen:</label>
       <select id="choose_admin" name="count">
         <option value=""></option>
       </select>
