--- a/backend/app/templates/game.html
+++ b/backend/app/templates/game.html
@@ -77,7 +77,7 @@
 </div>
 <div class="row col-md-offset-1" id="admin_interface">
   <div class="col-md-9">
-    <h3>Spiel starten (<b>Es kann kein Spieler mehr hinzu kommen</b>)</h3>
+    <h3>Spiel starten (<b>Der Admin kann Spieler nachträglich hinzufügen</b>)</h3>
   </div>
 </div>
 <div class="row col-md-offset-1" id="admin_interface">
@@ -103,22 +103,6 @@
 </div>
 
 
-<div class="row col-md-offset-1">
-<!-- The Modal -->
-  <div id="myModal" class="modal">
-    <!-- Modal content -->
-    <div class="modal-content">
-      <div class="modal-header">
-        <span class="close">&times;</span>
-        <h2>Modal Header</h2>
-      </div>
-      <div class="modal-body">
-        <p>Some text in the Modal Body</p>
-        <p>Some other text...</p>
-      </div>
-    </div>
-  </div>
-</div>
 
 <div class="row col-md-offset-1">
 <!-- The Modal -->
