some ui improvements on small displays and bugfix faq

--- a/backend/app/templates/base.html
+++ b/backend/app/templates/base.html
@@ -54,19 +54,20 @@
       <hr>
     </div>
   </div>
-  <div class="row col-md-offset-1">
-    <div class="col-xs-3 col-md-3">
-        <a id="donateBtn" href="#">Gib dem Entwickler ein Bier aus 🍺</a>
+  <div class="row col-xs-offset-1 col-md-offset-1">
+    <div class="col-xs-6 col-md-3">
+        <a id="donateBtn" href="#">Ein Bier an dem Entwickler 🍺</a>
     </div>
-    <div class="col-xs-3 col-md-3">
+    <div class="col-xs-5 col-md-2">
       <a target="_blank" href="{{ url_for('static',filename='html/impressum.html') }}"">
       Impressum</a>
     </div>
-    <div class="col-xs-3 col-md-3">
+    <div class="clearfix visible-xs-block visible-sm-block"></div>
+    <div class="col-xs-5 col-md-2">
       <a target="_blank" href= "{{ url_for('static',filename='html/datenschutz.html') }}"">
       Datenschutz</a>
     </div>
-    <div class="col-xs-4 col-md-3">
+    <div class="col-xs-6 col-md-3">
       <p>powerd by:
         <a target="_blank" href="https://coding-mission.de/">
           <picture>
@@ -76,7 +77,7 @@
       </p>
     </div>
   </div>
-  <div class="row col-md-offset-1 col-md-6" style="height:90px;">
+  <div class="row col-md-offset-1 col-md-6" style="height:20px;">
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/feedback.css') }}">
   </div>
   <div class="row col-md-offset-1">
