--- a/backend/app/templates/gameplay.html
+++ b/backend/app/templates/gameplay.html
@@ -10,7 +10,7 @@
   <div class="col-md-1 col-xs-offset-10 col-md-offset-8">
       <a class="roundetb" id="faqBtn" href="#"><i class="fas fa-question" title="Fragen?"></i></a>
   </div>
-  <div class="col-md-11 col-md-9 col-xs-offset-1">
+  <div class="col-md-11 col-xs-offset-1">
     <h2 class="message" id="Message"></h2>
   </div>
 </div>
@@ -208,7 +208,7 @@
     </div>
   </div>
   <div class="row ">
-    <div class="col-xs-2 col-sm-2 col-md-2 col-md-offset-1 col-xs-offset-1">
+    <div class="col-xs-4 col-sm-4 col-md-2 col-md-offset-1 col-xs-offset-1">
       <label for="delete_player">Spieler:</label>
       <select id="delete_player" name="count">
         <option value=""></option>
@@ -223,7 +223,8 @@
       </select>
       <button class="btn btn-primary" id='choose_admin_id' onclick="choose_admin()">Admin wählen</button>
     </div>
-    <div class="col-xs-6 col-sm-4 col-md-1">
+    <div class="clearfix visible-xs-block visible-sm-block"></div>
+    <div class="col-xs-6 col-sm-4 col-md-1 col-xs-offset-1">
       <label for="back_to_waiting">Spieler hinzufügen?</label>
 
       <button class="btn btn-primary" id='back_to_waiting' onclick="back_to_waiting()">zurück zum Warteraum</button>
@@ -238,7 +239,7 @@
   </div>
 </div>
 
-<div class="row col-md-offset-1 col-md-6" style="height:150px;">
+<div class="row col-md-offset-1 col-md-6">
   <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/feedback.css') }}">
 </div>
 <div class="row col-md-offset-1">
