refactoring html snippets and js in slittet files

--- a/backend/app/templates/index.html
+++ b/backend/app/templates/index.html
@@ -59,7 +59,7 @@
               <h3>Erläuterung:</h3>
             </div>
           </div>
-          {% include "rules.html" %}
+          {% include "snippet/rules.html" %}
         </div>
     </div>
     <br/>
