--- a/backend/app/templates/gameplay.html
+++ b/backend/app/templates/gameplay.html
@@ -166,72 +166,10 @@
   </div>
 
 </div>
-<div id="admin_interface">
-  <hr>
-  <div class="row ">
-    <div class="col-xs-11 col-md-11 col-md-offset-1 col-xs-offset-1">
-      <h2 id="admin_inforamtion">Admin</h2>
-    </div>
-  </div>
-  <div class="container justify-content-md-center justify-content-sx-center">
-    <div class="row">
-      <div class="col-xs-3 col-sm-3 col-md-3 col-md-offset-1 col-xs-offset-1">
-        <label for="stack_count_id">Anzahl:</label>
-        <input type="number" id="stack_count_id" name="stack_count_id"
-           min="0" max="13" size="2">
-      </div>
-      <div class="col-xs-5 col-sm-3 col-md-3">
-        <label for="transfer_source">Von:</label>
-        <select id="transfer_source" name="count">
-          <optgroup label="">
-            <option value="stack">Stapel</option>
-            <option value="schockaus">Schock aus</option>
-          </optgroup>
-          <optgroup id="transfer_source_user" label="Spieler">
-          </optgroup>
-        </select>
-      </div>
-      <div class="col-xs-4 col-sm-2 col-md-2">
-        <label for="transfer_target">An:</label>
-        <select id="transfer_target" name="count">
-          <option value=""></option>
-        </select>
-      </div>
-      <div class="col-xs-1 col-sm-2 col-md-1">
-        <button class="btn btn-primary" id='transfere_chips_id' onclick="transfer_chips()">Verteilen</button>
-      </div>
-    </div>
-  </div>
-  <div class="row ">
-    <div class="col-xs-11 col-md-11 col-md-offset-1 col-xs-offset-1">
-      <h2 id="admin_player">Spieler verwalten (Beta)</h2>
-    </div>
-  </div>
-  <div class="row ">
-    <div class="col-xs-4 col-sm-4 col-md-2 col-md-offset-1 col-xs-offset-1">
-      <label for="delete_player">Spieler:</label>
-      <select id="delete_player" name="count">
-        <option value=""></option>
-      </select>
-      <button class="btn btn-primary" id='delete_player_id' onclick="delete_player()">Spieler entfernen</button>
-    </div>
 
-    <div class="col-xs-6 col-sm-4 col-md-3">
-      <label for="choose_admin">Neuen Admin wählen:</label>
-      <select id="choose_admin" name="count">
-        <option value=""></option>
-      </select>
-      <button class="btn btn-primary" id='choose_admin_id' onclick="choose_admin()">Admin wählen</button>
-    </div>
-    <div class="clearfix visible-xs-block visible-sm-block"></div>
-    <div class="col-xs-6 col-sm-4 col-md-1 col-xs-offset-1">
-      <label for="back_to_waiting">Spieler hinzufügen?</label>
+{% include "snippet/adminpanel.html" %}
 
-      <button class="btn btn-primary" id='back_to_waiting' onclick="back_to_waiting()">zurück zum Warteraum</button>
-    </div>
-  </div>
 
-</div>
 
 <div class="row ">
   <div class="col-md-1 col-xs-offset-10 col-md-offset-10">
@@ -242,108 +180,10 @@
 <div class="row col-md-offset-1 col-md-6">
   <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/feedback.css') }}">
 </div>
-<div class="row col-md-offset-1">
-<!-- The Modal -->
-  <div id="faqModal" class="modal">
-    <!-- Modal content -->
-    <div class="modal-content">
-      <div class="modal-header">
-        <span id="faqclose" class="close">&times;</span>
-        <h2>Häufig Fragen</h2>
-      </div>
-      <div class="modal-body">
-        <button class="accordion">Wie würfel ich?</button>
-        <div class="panel">
-          <p>Mit einem einfachen Klick auf das Symbol Würfeln wird gewürfelt</p>
-          <p>Du findest das Symbol links oben</p>
-            <div class="col-md-11 col-md-offset-1 example_img">
-              <picture>
-                <img alt="FAQ Würfeln" style="width:10%; height:auto;" src="{{ url_for('static',filename='image/thowdice.png') }}">
-              </picture>
-            </div>
-        </div>
-        <button class="accordion">Wie decke ich die Würfel auf?</button>
-        <div class="panel">
-          <p>Mit einem einfachen Klick auf das Symbol Aufdecken wird aufgedeckt</p>
-          <p>Du findest das Symbol links oben neben dem Ende Button</p>
-          <div class="col-md-11 col-md-offset-1 example_img">
-            <picture>
-              <img alt="FAQ Aufdecken" style="width:10%; height:auto;" src="{{ url_for('static',filename='image/pullupdice.png') }}">
-            </picture>
-          </div>
-        </div>
-        <button class="accordion">Wie werden Chips/Deckel verteilt?</button>
-        <div class="panel">
-          <p>Nur dem Admin (derjenige der ein Spiel erstellt hat) steht diese Funktion zur Verfügung</p>
-          <p>Der Admin findet ganz unten einige zusätzliche Bedienelemente</p>
-          <p>Es muss die Anzahl der Chips gewählt werden und von welchem Spieler zu welchem Spieler die Chips verteilt werden sollen</p>
-          <p>Mit dem Button Verteilen wird die Auswahl ausgefürt und die neue Runde startet automatisch</p>
-          <p>Beim Schock aus muss die Anzahl nicht ausgewählt werden. Der unter von: ausgewählte Spieler erhält alle Chips und verliert die Runde</p>
-          <div class="col-md-11 col-md-offset-1 example_img">
-            <picture>
-              <img alt="FAQ Chips Verteilen" style="width:70%; height:auto;" src="{{ url_for('static',filename='image/changechips.png') }}">
-            </picture>
-          </div>
-        </div>
-        <button class="accordion">Kann ich einen Spieler entfernen?</button>
-        <div class="panel">
-          <p>Nur dem Admin (derjenige der ein Spiel erstellt hat) steht diese Funktion zur Verfügung</p>
-          <p>Der Admin findet ganz unten einige zusätzliche Bedienelemente unter der Rubrick Spieler verwalten</p>
-          <p>Erst muss über das Auswahlfeld der Spieler gewählt werden, der entfernt werden soll.</p>
-          <p>Mit dem Button "Spieler entfernen" wird der ausgewählte Spieler aus dem Spiel entfernt</p>
-          <p>Der Admin kann nicht entfernt werden (eine Funktion Admin wechseln ist in Abeit)</p>
-          <div class="col-md-11 col-md-offset-1 example_img">
-            <picture>
-              <img alt="FAQ Spieler löschen" style="width:20%; height:auto;" src="{{ url_for('static',filename='image/delete_player.png') }}">
-            </picture>
-          </div>
-        </div>
-        <button class="accordion">Weitere Fragen?</button>
-        <div class="panel">
-          <p>Schau dir gerne noch mal ganz in Ruhe das Erklärvideo an</p>
-          <p>hier werden alle Fragen beantwortet</p>
-          <div class="col-md-4 col-md-offset-1 example_img">
-            <video  controls>
-             <source src="{{ url_for('static',filename='video/540P_Mittel.mp4') }}" type="video/mp4" media="all and (max-width: 450px)">
-             <source src="{{ url_for('static',filename='video/540P_Mittel.webm') }}" type="video/webm" media="all and (max-width: 450px)">
-             <source src="{{ url_for('static',filename='video/1080P_Hoch.mp4') }}" type="video/mp4">
-             <source src="{{ url_for('static',filename='video/1080P_Hoch.webm') }}" type="video/webm">
-            Your browser does not support the video tag.
-            </video>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="row col-md-offset-1">
-<!-- The Modal -->
-  <div id="feedbackModal" class="modal">
-    <!-- Modal content -->
-    <div class="modal-content">
-      <div class="modal-header">
-        <span id="feedbackclose" class="close">&times;</span>
-        <h2>Anregungen oder Problme?</h2>
-      </div>
-      <div class="modal-body">
-        <p>Wenn es Probleme gibt, bitte immer den Browser mit angeben das hilft mir enorm das Problem nachzuvollziehen</p>
-        <p>Wenn dir das Spiel gefällt oder du Verbesserungen hast kannst du mir gerne schreiben</p>
-        <p>Die E-Mail Adresse ist optional ich kontaktiere dich nur wenn ich Rückfragen habe</p>
-        <form class="form" method="POST" action="{{ url_for('game_play', gid=game.UUID) }}">
-          {{ form.csrf_token }}
-          {{ wtf.form_field(form.browser) }}
-          {{ wtf.form_field(form.message) }}
-          {{ wtf.form_field(form.mail) }}
-          {% for error in form.browser.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-          {% endfor %}
-          <input class="btn btn-primary" type="submit" value="Senden">
-        </form>
-      </div>
-    </div>
-  </div>
-</div>
+{% include "snippet/game_play_faq.html" %}
 
+
+{% include "snippet/feedback.html" %}
 {% block footer %}
   {{ super() }}
 {% endblock %}
@@ -354,6 +194,9 @@
   </script>
   <script type=text/javascript src="{{url_for('static', filename='scripts/feedback.js') }}">
   </script>
+  <script type=text/javascript src="{{url_for('static', filename='scripts/adminpanel.js') }}">
+  </script>
+
 <script>
 
 
@@ -448,80 +291,7 @@
     xhttp.send(JSON.stringify({dice1:dice1_cb, dice2:dice2_cb, dice3:dice3_cb}));
   }
 
-  function delete_player(){
-    if (confirm('Bist du sicher das du den Spieler entfernen möchtest. Dies kann nicht rückgängig gemacht werden')) {
-      var game = document.getElementById('UUID');
-      var game_id = game.innerHTML;
-      game_id = game_id.replace(/['"]+/g, '');
-      var delete_player = document.getElementById('delete_player');
-      var user_id = delete_player.options[delete_player.selectedIndex].value;
 
-      var xhttp = new XMLHttpRequest();
-      xhttp.open("DELETE", "/api/game/"+game_id+"/user/"+user_id);
-      xhttp.setRequestHeader("Content-Type", "application/json");
-      xhttp.onreadystatechange = function() {
-        if (xhttp.readyState == XMLHttpRequest.DONE) {
-          var res=JSON.parse(xhttp.responseText);
-          if (xhttp.status != 200){
-            alert(''+res.Message);
-          }else{
-            window.location.reload();
-          }
-        }
-      }
-      xhttp.send(JSON.stringify({}));
-    }
-  }
-
-  function choose_admin(){
-    if (confirm('Bist du sicher das du den Admin wechseln möchtest. Dies kann nur vom neune Admin rückgängig gemacht werden')) {
-      var game = document.getElementById('UUID');
-      var game_id = game.innerHTML;
-      game_id = game_id.replace(/['"]+/g, '');
-      var choose_admin = document.getElementById('choose_admin');
-      var new_admin_id = choose_admin.options[choose_admin.selectedIndex].value;
-      var admin_el = document.getElementById('admin_id');
-      var old_admin_id = admin_el.innerHTML;
-
-      var xhttp = new XMLHttpRequest();
-      xhttp.open("POST", "/api/game/"+game_id+"/user/"+old_admin_id);
-      xhttp.setRequestHeader("Content-Type", "application/json");
-      xhttp.onreadystatechange = function() {
-        if (xhttp.readyState == XMLHttpRequest.DONE) {
-          var res=JSON.parse(xhttp.responseText);
-          if (xhttp.status != 200){
-            alert(''+res.Message);
-          }else{
-            window.location.reload();
-          }
-        }
-      }
-      xhttp.send(JSON.stringify({new_admin_id:new_admin_id}));
-    }
-  }
-
-  function back_to_waiting(){
-    if (confirm('Bist du sicher das du zurück zum Warteraum willst um einen Spieler hinzuzufügen?')) {
-      var game = document.getElementById('UUID');
-      var game_id = game.innerHTML;
-      game_id = game_id.replace(/['"]+/g, '');
-
-      var xhttp = new XMLHttpRequest();
-      xhttp.open("POST", "/api/game/"+game_id+"/back");
-      xhttp.setRequestHeader("Content-Type", "application/json");
-      xhttp.onreadystatechange = function() {
-        if (xhttp.readyState == XMLHttpRequest.DONE) {
-          var res=JSON.parse(xhttp.responseText);
-          if (xhttp.status != 200){
-            alert(''+res.Message);
-          }else{
-            alert(res.Message + ' Alle Speiler geraten zurück zum Warteraum');
-          }
-        }
-      }
-      xhttp.send(JSON.stringify({}));
-    }
-  }
 
   function dicehelper(eyes){
     if (eyes == 1){
@@ -786,44 +556,6 @@
 
 
 
-  function transfer_chips(){
-    // /game/<gid>/user/chips
-    var game = document.getElementById('UUID');
-    var gameid = game.innerHTML;
-    gameid = gameid.replace(/['"]+/g, '');
-    var xhttp = new XMLHttpRequest();
-
-    var count = document.getElementById('stack_count_id').value;
-    // var stack = document.getElementById('stack_cb').checked;
-    // var aus = document.getElementById('schockaus_cb').checked;
-    var transfer_source = document.getElementById('transfer_source');
-    var source = transfer_source.options[transfer_source.selectedIndex].value;
-    var transfer_target = document.getElementById('transfer_target');
-    var target = transfer_target.options[transfer_target.selectedIndex].value;
-
-
-    xhttp.open("POST", "/api/game/"+gameid+"/user/chips");
-    xhttp.setRequestHeader("Content-Type", "application/json");
-    xhttp.onreadystatechange = function() {
-      if (xhttp.readyState == XMLHttpRequest.DONE) {
-        if (xhttp.status != 200){
-          var res=JSON.parse(xhttp.responseText);
-          alert(''+res.Message);
-        }else{
-          var res=JSON.parse(xhttp.responseText);
-          alert(''+res.Message);
-        }
-      }
-    }
-    if (source ==  'stack'){
-      xhttp.send(JSON.stringify({count:parseInt(count), stack:true, target:parseInt(target)}));
-    }else if (source ==  'schockaus') {
-      xhttp.send(JSON.stringify({schockaus:true, target:parseInt(target)}));
-    }else{
-      xhttp.send(JSON.stringify({count:parseInt(count), source:parseInt(source), target:parseInt(target)}));
-    }
-
-  }
 
   function startup(){
     faq();
